Part_2/log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: log-output
  name: log-output-rw-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-rw
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
