Part_2/log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: kube-ping-pong-svc
            port:
              number: 2346
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-rw-svc
            port: 
              number: 2345
